jsinterop-ts-defs-test/src/test/resources/errors/members/JsTypeWithDuplicateMethodAndField.java
package com.vertispan.tsdefs.tests.types;

import jsinterop.annotations.*;

@JsType
public class JsTypeWithDuplicateMethodAndField {
    public String member0;
    public void member0(){
    }
}